# gambatte-libretro

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
libgambatte/libretro/: net_serial.cpp
libgambatte/libretro-common/include/vfs/: vfs.h
